# rag-system

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: single_pass.toml
docs/: offline-deployment.md  oss-20b-pinned-generator-parity.md  oss-20b-standard-overnight.md
docs/plans/: 2026-07-21-rag-systems-four-week-plan.md
docs/progress/: 2026-07-22-qwen3-embedding-baseline-handoff.md  2026-07-23-pinned-vllm-and-single-pass.md
docs/superpowers/plans/: 2026-07-13-latex-chunking-pilot.md
docs/superpowers/specs/: 2026-07-13-latex-chunking-pilot-design.md  (+1 more)
latex-parser/: pyproject.toml
latex-parser/tests/: test_tokenizer.py
old/docs/: retrieval-architecture.md
old/scripts/: build_dense_index.py  download_qasper_parquet.sh  plot_benchmark_results.py  report_checkpoint1.py  run_public_bench.py  serve_embedding.sh
old/tests/: test_retrieval.py
patches/: vllm-0.19.1-harmony-strict-false.patch
prompts/: single_pass.txt
scripts/: build_dense_index.py  diagnose.py  filter_pilot.py  inspect_sample.py  plot_benchmark_results.py  prepare_browsecomp_plus.py  run_all_benchmarks.sh  run_chunking.py  run_oss_standard_agent.py  run_oss_standard_batch.py  run_public_bench.py  run_single_pass.py  run_standard_agent.py  serve_generator.sh  serve_oss_generator.sh  serve_query_encoder.py  serve_standard_search.py  smoke_standard_search.py  spot_check.py  stage_offline_assets.py  summarize_agent_runs.py  verify_offline_assets.py
src/chunking/: chunker.py  latex_parse.py  markdown_parse.py  pipeline.py  stats.py  tokenizer.py
src/rag_system/: __init__.py  contracts.py  offline_assets.py
src/retrieval/: __init__.py  benchmarks.py  dense.py  fusion.py  metrics.py  pipeline.py  sparse.py  types.py
tests/: test_browsecomp_plus.py  test_chunker.py  test_latex_parse.py  test_markdown_parse.py  test_offline_assets.py  test_oss_standard_agent.py  test_oss_standard_batch.py  test_pipeline.py  test_remote_encoder.py  test_retrieval.py  test_retrieval_evaluation.py  test_run_summary.py  test_search_service.py  test_single_pass.py  test_standard_agent.py  test_standard_search.py  test_stats.py  test_tokenizer.py  test_vllm_chat.py  test_vllm_responses.py
(+32 files in other folders)
