[project]
name = "rag-system-retrieval"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["bm25s>=0.3,<0.4"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
eval = ["datasets>=2.19", "matplotlib>=3.8"]

[tool.pytest.ini_options]
testpaths = ["tests", "latex-parser/tests"]
pythonpath = ["src", "latex-parser/src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
